# aiogram-youtube-data

./: .env.example  README.md  pyproject.toml
aiogram_youtube_data/TelegramBot/: bot.py  telegram_db_excel_service.py
aiogram_youtube_data/TelegramBot/config/: config.py
aiogram_youtube_data/TelegramBot/custom_exceptions/: custom_exceptions.py
aiogram_youtube_data/TelegramBot/custom_filters/: custom_filters.py
aiogram_youtube_data/TelegramBot/handlers/: handler.py
aiogram_youtube_data/TelegramBot/keyboards/: set_menu.py
aiogram_youtube_data/TelegramBot/lexicon/: lexicon_ru.py
aiogram_youtube_data/TelegramBot/models/: methods.py
aiogram_youtube_data/TelegramBot/service/: youtubeapiclientv3.py
aiogram_youtube_data/TelegramBot/utils/: logger.py
